# cahtqtClient

./: .gitignore  DOCUMENTATION_STATUS.txt  DOCUMENTATION_SUMMARY.txt  DOCUMENTATION_UPDATE_REPORT.md  DOCUMENTATION_UPDATE_REPORT_ETOKEN.md  DOCUMENTATION_UPDATE_SUMMARY.md  DOCUMENTATION_UPDATE_SUMMARY.txt  ETOKEN_DOCUMENTATION_VERIFICATION.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
.claude/: .ck.json  metadata.json  settings.json  settings.local.json
docs/: README.md  code-standards.md  (+8 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_init.sql  002_rename_tables.sql  003_migrate_settings_keys.sql  004_add_cert_org.sql
src-tauri/plans/reports/: code-reviewer-260407-1525-credential-export-username.md  docs-manager-260407-2023-license-refactor-documentation.md  project-manager-260312-1003-cahtqt-pki-ui-completion.md
src-tauri/src/: app_log.rs  cert_parser.rs  comm_key_service.rs  lib.rs  main.rs  models.rs
src-tauri/src/commands/: communication.rs  decrypt.rs  encrypt.rs  etoken.rs  license.rs  logs.rs  mod.rs  partners.rs  settings.rs
src-tauri/src/db/: logs_repo.rs  mod.rs  partner_members_repo.rs  partners_repo.rs  settings_repo.rs
src-tauri/src/etoken/: certificate_exporter.rs  certificate_reader.rs  library_detector.rs  mod.rs  models.rs  token_manager.rs
src-tauri/src/htqt_ffi/: callbacks.rs  error_codes.rs  lib_loader.rs  mod.rs  token_context.rs  types.rs
src-tauri/src/license/: error.rs  machine.rs  mod.rs  payload.rs  token.rs
(+123 files in other folders)
