[package]
name = "cahtqt"
version = "1.0.0"
description = "CAHTQT PKI Encryption Desktop App"
authors = []
edition = "2021"

[lib]
name = "cahtqt_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "cahtqt"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite"] }
libloading = "0.8"
x509-parser = "0.16"
zeroize = { version = "1.8", features = ["std"] }
sha1 = "0.10"
cryptoki = "0.6"
secrecy = "0.8"
rsa = { version = "0.9", features = ["sha2"] }
rand = "0.8"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1", features = ["v4"] }
thiserror = "1"
dirs = "5"
chrono = { version = "0.4", features = ["clock"] }

[profile.dev]
incremental = true

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
